feat: meta info added and contact json changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PENSAKI </title>
+    <meta
+      name="description"
+      content="PENSAKI is s bundle of SaaS software for 15 users. users can be added online. pensaki is a a low cost package with high professional software features and"
+    />
+    <title>PENSAKI</title>
   </head>
   <body>
     <div id="root"></div>
